{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 27,
  "lineage": "c33e3ecc-7060-ba93-50b0-79ac4cb731a9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "open_web_ui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:545009862210:internet-gateway/igw-07825e4a5fe821d11",
            "id": "igw-07825e4a5fe821d11",
            "owner_id": "545009862210",
            "vpc_id": "vpc-09d7e43420aae5d96"
          },
          "dependencies": [
            "aws_vpc.open_web_ui"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "open_web_ui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:545009862210:route-table/rtb-02cf9b8ec33407295",
            "id": "rtb-02cf9b8ec33407295",
            "owner_id": "545009862210",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07825e4a5fe821d11",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09d7e43420aae5d96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.open_web_ui",
            "aws_vpc.open_web_ui"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "open_web_ui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e33c283af953d77d",
            "route_table_id": "rtb-02cf9b8ec33407295",
            "subnet_id": "subnet-08c047bb6dc6b1255"
          },
          "dependencies": [
            "aws_internet_gateway.open_web_ui",
            "aws_route_table.open_web_ui",
            "aws_subnet.subnet",
            "aws_vpc.open_web_ui"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:545009862210:security-group/sg-0753eae4a8caed15f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0753eae4a8caed15f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240929020622488900000001",
            "name_prefix": "terraform-",
            "owner_id": "545009862210",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09d7e43420aae5d96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.open_web_ui"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:545009862210:subnet/subnet-08c047bb6dc6b1255",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c047bb6dc6b1255",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "545009862210",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-09d7e43420aae5d96"
          },
          "dependencies": [
            "aws_vpc.open_web_ui"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:545009862210:vpc/vpc-013ae19012ac58849",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b59db13861492c54",
            "default_route_table_id": "rtb-069b414c09c929b6e",
            "default_security_group_id": "sg-088fc284f4dd3c5ea",
            "dhcp_options_id": "dopt-0bfaabf7e86896fff",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-013ae19012ac58849",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-069b414c09c929b6e",
            "owner_id": "545009862210"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "open_web_ui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:545009862210:vpc/vpc-09d7e43420aae5d96",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00ecf3ddc0d7f8dc8",
            "default_route_table_id": "rtb-04545ded0042923bd",
            "default_security_group_id": "sg-0c564a9bb0e547464",
            "dhcp_options_id": "dopt-0bfaabf7e86896fff",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09d7e43420aae5d96",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04545ded0042923bd",
            "owner_id": "545009862210"
          }
        }
      ]
    }
  ]
}